# mf6adj

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
autotest/: mf6adj_01_test.py  test_freyberg.py  test_ie.py  test_mf6_adj_1.py  test_sagehen.py  test_sanpedro.py  test_unstructured.py  test_xd_box.py
autotest/ex-gwf-sagehen-external/: ex-gwf-sagehen.chd  ex-gwf-sagehen.chd_stress_period_data_1.txt  ex-gwf-sagehen.dis  ex-gwf-sagehen.dis_botm.txt  ex-gwf-sagehen.dis_delc.txt  ex-gwf-sagehen.dis_delr.txt  ex-gwf-sagehen.dis_idomain.txt  ex-gwf-sagehen.dis_top.txt  ex-gwf-sagehen.drn  ex-gwf-sagehen.drn_stress_period_data_1.txt  ex-gwf-sagehen.ic  ex-gwf-sagehen.ic_strt.txt  ex-gwf-sagehen.ims  ex-gwf-sagehen.mvr  ex-gwf-sagehen.mvr_packages.txt  ex-gwf-sagehen.mvr_perioddata_1.txt  ex-gwf-sagehen.nam  ex-gwf-sagehen.npf  ex-gwf-sagehen.npf_k.txt  ex-gwf-sagehen.npf_k33.txt  ex-gwf-sagehen.oc  ex-gwf-sagehen.sfr  ex-gwf-sagehen.sfr_connectiondata.txt  ex-gwf-sagehen.sfr_packagedata.txt  ex-gwf-sagehen.sto  ex-gwf-sagehen.sto_iconvert.txt  ex-gwf-sagehen.sto_ss.txt  ex-gwf-sagehen.sto_sy.txt  ex-gwf-sagehen.tdis  ex-gwf-sagehen.uzf  ex-gwf-sagehen.uzf_packagedata.txt  ex-gwf-sagehen.uzf_perioddata_1.txt  ex-gwf-sagehen.uzf_perioddata_149.txt  ex-gwf-sagehen.uzf_perioddata_151.txt  ex-gwf-sagehen.uzf_perioddata_152.txt  ex-gwf-sagehen.uzf_perioddata_153.txt  ex-gwf-sagehen.uzf_perioddata_154.txt  ex-gwf-sagehen.uzf_perioddata_155.txt  ex-gwf-sagehen.uzf_perioddata_156.txt  ex-gwf-sagehen.uzf_perioddata_157.txt  (+156 more)
autotest/ex-gwf-zaidel/: ex-gwf-zaidel.chd  ex-gwf-zaidel.dis  ex-gwf-zaidel.ic  ex-gwf-zaidel.ims  ex-gwf-zaidel.nam  ex-gwf-zaidel.npf  ex-gwf-zaidel.oc  ex-gwf-zaidel.sto  ex-gwf-zaidel.tdis  mfsim.nam  test.adj
autotest/freyberg/: pert_results.csv
autotest/freyberg_highres/: freyberg6.dis  freyberg6.ghb  freyberg6.ghb_stress_period_data_1.txt  freyberg6.ims  freyberg6.nam  freyberg6.npf  freyberg6.obs_continuous_heads.csv.txt  freyberg6.sfr  freyberg6.sto  freyberg6.sto_sy_layer1.txt  freyberg6.tdis  freyberg6.wel
autotest/freyberg_mf6_pestppv5/: freyberg6.nam  freyberg6_run_ies_glm_noloc_standard.pst  truth.base.obs.csv  truth.base.rei  truth.phi.group.csv  truth.phi.meas.csv
autotest/freyberg_mf6_pestppv5_mh/: MF6-ADJ.INP  Plotting.py  freyberg6.dis  freyberg6.sto  heads.csv  sfr.csv  test.adj  truth.base.par
autotest/freyberg_mh_adj/: ADJ.py  Adjoint.py  ColumnBar.xlsx  Generate_Combinations.py  Generate_Combinations_PresHead.py  Generate_Combinations_PresHead_paper.py  MF6-ADJ.INP  MF6-ADJ_.INP  MF6-ADJ_all.INP  freyberg6.chd  freyberg6.dis  freyberg6.ghb  freyberg6.ic  freyberg6.ims  freyberg6.nam  freyberg6.npf  freyberg6.oc  freyberg6.rch  freyberg6.rcha  freyberg6.sfr  freyberg6.sto  freyberg6.tdis  freyberg62.wel  freyberg6_old.dis  freyberg6_ori.npf  head.obs  heads.csv  heads_old.csv  mfsim.nam  test.adj
autotest/freyberg_quadtree/: freyberg6.chd_stress_period_data_1.txt  freyberg6.disv_top.txt  freyberg6.ims  freyberg6.sfr  freyberg6.sto  heads.csv  mfsim.nam  project.disv_idomain_layer1.txt  project.ims  project.nam  project.sto  project.tdis  project.wel  sfr.csv  test.adj
autotest/freyberg_structured/: freyberg6.dis  freyberg6.ghb  freyberg6.ims  freyberg6.npf  freyberg6.sfr  freyberg6.sto  head.obs
autotest/ie_1sp/: flow.disv  flow.drn.obs  flow.ic  flow.ims  flow.maw  flow.nam  flow.nam.bak  flow.oc  flow.tdis  flow.tvs  test.py
autotest/ie_nomaw_1sp/: flow.disv  flow.drn.obs  flow.ims.bak  flow.maw  flow.nam  flow.oc  flow.tdis  flow.tvs  flow_org.drn.obs  mfsim.nam  test.py
autotest/mh_org_codes/: ADJ.py  Adjoint.py  Plotting.py  freyberg6.py
autotest/nested/: mfsim.nam  snglhdtest.disv  (+11 more)
examples/: clear_output_all.py  sanpedro_demo.ipynb  structured_freyberg_demo.ipynb  xdbox_demo.ipynb  zaidel_demo.ipynb
katie_testing/: katie_testing.py
mf6adj/: __init__.py  adj.py  pm.py
(+104 files in other folders)
